// Copyright (c) 2013, Vastech SA (PTY) LTD. All rights reserved.
// http://code.google.com/p/gogoprotobuf/gogoproto
//
// Redistribution and use in source and binary forms, with or without
// modification, are permitted provided that the following conditions are
// met:
//
//     * Redistributions of source code must retain the above copyright
// notice, this list of conditions and the following disclaimer.
//     * Redistributions in binary form must reproduce the above
// copyright notice, this list of conditions and the following disclaimer
// in the documentation and/or other materials provided with the
// distribution.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

package test;

import "code.google.com/p/gogoprotobuf/gogoproto/gogo.proto";

//shorthand
//nid = nil is default (nullable = false)
//nin = nil is nil (nullable = true) [typical]

//test cases for each applicable message are:
//vis = value is set
//vim = value is missing

message SimpleMessage {
	optional bytes Id = 1 [(gogoproto.customtype) = "code.google.com/p/gogoprotobuf/test/custom.Uuid", (gogoproto.nullable) = false];
	optional string SimpleName = 2 [(gogoproto.nullable) = false];
	optional int64 Time = 3;
}

message NidOptNative {
	optional double Field1 = 1 [(gogoproto.nullable) = false];
	optional float Field2 = 2 [(gogoproto.nullable) = false];
	optional int32 Field3 = 3 [(gogoproto.nullable) = false];
	optional int64 Field4 = 4 [(gogoproto.nullable) = false];
	optional uint32 Field5 = 5 [(gogoproto.nullable) = false];
	optional uint64 Field6 = 6 [(gogoproto.nullable) = false];
	optional sint32 Field7 = 7 [(gogoproto.nullable) = false];
	optional sint64 Field8 = 8 [(gogoproto.nullable) = false];
	optional fixed32 Field9 = 9 [(gogoproto.nullable) = false];
	optional sfixed32 Field10 = 10 [(gogoproto.nullable) = false];
	optional fixed64 Field11 = 11 [(gogoproto.nullable) = false];
	optional sfixed64 Field12 = 12 [(gogoproto.nullable) = false];
	optional bool Field13 = 13 [(gogoproto.nullable) = false];
	optional string Field14 = 14 [(gogoproto.nullable) = false];
	optional bytes Field15 = 15 [(gogoproto.nullable) = false];
}

message NinOptNative {
	optional double Field1 = 1;
	optional float Field2 = 2;
	optional int32 Field3 = 3;
	optional int64 Field4 = 4;
	optional uint32 Field5 = 5;
	optional uint64 Field6 = 6;
	optional sint32 Field7 = 7;
	optional sint64 Field8 = 8;
	optional fixed32 Field9 = 9;
	optional sfixed32 Field10 = 10;
	optional fixed64 Field11 = 11;
	optional sfixed64 Field12 = 12;
	optional bool Field13 = 13;
	optional string Field14 = 14;
	optional bytes Field15 = 15;
}

message NidRepNative {
	repeated double Field1 = 1 [(gogoproto.nullable) = false];
	repeated float Field2 = 2 [(gogoproto.nullable) = false];
	repeated int32 Field3 = 3 [(gogoproto.nullable) = false];
	repeated int64 Field4 = 4 [(gogoproto.nullable) = false];
	repeated uint32 Field5 = 5 [(gogoproto.nullable) = false];
	repeated uint64 Field6 = 6 [(gogoproto.nullable) = false];
	repeated sint32 Field7 = 7 [(gogoproto.nullable) = false];
	repeated sint64 Field8 = 8 [(gogoproto.nullable) = false];
	repeated fixed32 Field9 = 9 [(gogoproto.nullable) = false];
	repeated sfixed32 Field10 = 10 [(gogoproto.nullable) = false];
	repeated fixed64 Field11 = 11 [(gogoproto.nullable) = false];
	repeated sfixed64 Field12 = 12 [(gogoproto.nullable) = false];
	repeated bool Field13 = 13 [(gogoproto.nullable) = false];
	repeated string Field14 = 14 [(gogoproto.nullable) = false];
	repeated bytes Field15 = 15 [(gogoproto.nullable) = false];
}

message NinRepNative {
	repeated double Field1 = 1;
	repeated float Field2 = 2;
	repeated int32 Field3 = 3;
	repeated int64 Field4 = 4;
	repeated uint32 Field5 = 5;
	repeated uint64 Field6 = 6;
	repeated sint32 Field7 = 7;
	repeated sint64 Field8 = 8;
	repeated fixed32 Field9 = 9;
	repeated sfixed32 Field10 = 10;
	repeated fixed64 Field11 = 11;
	repeated sfixed64 Field12 = 12;
	repeated bool Field13 = 13;
	repeated string Field14 = 14;
	repeated bytes Field15 = 15;
}

message NidRepPackedNative {
	repeated int32 Field3 = 3 [(gogoproto.nullable) = false, packed = true];
	repeated int64 Field4 = 4 [(gogoproto.nullable) = false, packed = true];
	repeated bool Field13 = 13 [(gogoproto.nullable) = false, packed = true];
}

message NinRepPackedNative {
	repeated int32 Field3 = 3;
	repeated int64 Field4 = 4;
	repeated bool Field13 = 13;
}

message NidOptStruct {
	optional double Field1 = 1 [(gogoproto.nullable) = false];
	optional float Field2 = 2 [(gogoproto.nullable) = false];
	optional NidOptNative Field3 = 3 [(gogoproto.nullable) = false];
	optional NinOptNative Field4 = 4 [(gogoproto.nullable) = false];
	optional uint64 Field6 = 6 [(gogoproto.nullable) = false];
	optional sint32 Field7 = 7 [(gogoproto.nullable) = false];
	optional NidOptNative Field8 = 8 [(gogoproto.nullable) = false];
	optional bool Field13 = 13 [(gogoproto.nullable) = false];
	optional string Field14 = 14 [(gogoproto.nullable) = false];
	optional bytes Field15 = 15 [(gogoproto.nullable) = false];
}

message NinOptStruct {
	optional double Field1 = 1;
	optional float Field2 = 2;
	optional NidOptNative Field3 = 3;
	optional NinOptNative Field4 = 4;
	optional uint64 Field6 = 6;
	optional sint32 Field7 = 7;
	optional NidOptNative Field8 = 8;
	optional bool Field13 = 13;
	optional string Field14 = 14;
	optional bytes Field15 = 15;
}

message NidRepStruct {
	repeated double Field1 = 1 [(gogoproto.nullable) = false];
	repeated float Field2 = 2 [(gogoproto.nullable) = false];
	repeated NidOptNative Field3 = 3 [(gogoproto.nullable) = false];
	repeated NinOptNative Field4 = 4 [(gogoproto.nullable) = false];
	repeated uint64 Field6 = 6 [(gogoproto.nullable) = false];
	repeated sint32 Field7 = 7 [(gogoproto.nullable) = false];
	repeated NidOptNative Field8 = 8 [(gogoproto.nullable) = false];
	repeated bool Field13 = 13 [(gogoproto.nullable) = false];
	repeated string Field14 = 14 [(gogoproto.nullable) = false];
	repeated bytes Field15 = 15 [(gogoproto.nullable) = false];
}

message NinRepStruct {
	repeated double Field1 = 1;
	repeated float Field2 = 2;
	repeated NidOptNative Field3 = 3;
	repeated NinOptNative Field4 = 4;
	repeated uint64 Field6 = 6;
	repeated sint32 Field7 = 7;
	repeated NidOptNative Field8 = 8;
	repeated bool Field13 = 13;
	repeated string Field14 = 14;
	repeated bytes Field15 = 15;
}

message NidEmbeddedStruct {
	optional NidOptNative Field1 = 1 [(gogoproto.nullable) = false, (gogoproto.embed) = true];
	optional NidOptNative Field200 = 200 [(gogoproto.nullable) = false];
	optional bool Field210 = 210 [(gogoproto.nullable) = false];
}

message NinEmbeddedStruct {
	optional NidOptNative Field1 = 1 [(gogoproto.embed) = true];
	optional NidOptNative Field200 = 200;
	optional bool Field210 = 210;
}

message NidNestedStruct {
	optional NidOptStruct Field1 = 1 [(gogoproto.nullable) = false];
	repeated NidRepStruct Field2 = 2 [(gogoproto.nullable) = false];
}

message NinNestedStruct {
	optional NidOptStruct Field1 = 1;
	repeated NidRepStruct Field2 = 2;
}

message NidOptUuidAsBytes {
	optional bytes Id = 1 [(gogoproto.customtype) = "code.google.com/p/gogoprotobuf/test/custom.Uuid", (gogoproto.nullable) = false];
}

message NinOptUuidAsBytes {
	optional bytes Id = 1 [(gogoproto.customtype) = "code.google.com/p/gogoprotobuf/test/custom.Uuid"];
}

message NidRepUuidAsBytes {
	repeated bytes Id = 1 [(gogoproto.customtype) = "code.google.com/p/gogoprotobuf/test/custom.Uuid", (gogoproto.nullable) = false];
}

message NinRepUuidAsBytes {
	repeated bytes Id = 1 [(gogoproto.customtype) = "code.google.com/p/gogoprotobuf/test/custom.Uuid"];
}

message NidOptUint128AsBytes {
	optional bytes Value = 1 [(gogoproto.customtype) = "code.google.com/p/gogoprotobuf/test/custom.Uint128", (gogoproto.nullable) = false];
}

message NinOptUint128AsBytes {
	optional bytes Value = 1 [(gogoproto.customtype) = "code.google.com/p/gogoprotobuf/test/custom.Uint128"];
}

message NidRepUint128AsBytes {
	repeated bytes Value = 1 [(gogoproto.customtype) = "code.google.com/p/gogoprotobuf/test/custom.Uint128", (gogoproto.nullable) = false];
}

message NinRepUint128AsBytes {
	repeated bytes Value = 1 [(gogoproto.customtype) = "code.google.com/p/gogoprotobuf/test/custom.Uint128"];
}


